--- a/results/shootout-fasta.html
+++ b/results/shootout-fasta.html
@@ -15,264 +15,339 @@
       "fasta/nothreads"
    ],
    [
+      "5.8.9",
+      264.98,
+      240.79
+   ],
+   [
+      "5.10.0",
+      258.01,
+      null
+   ],
+   [
       "5.10.1",
-      280.62,
-      249.25
+      273.07,
+      241.91
+   ],
+   [
+      "5.12.0",
+      271.43,
+      235.22
    ],
    [
       "5.13.0",
-      294.89,
-      262.19
+      274.59,
+      245.8
    ],
    [
       "5.13.1",
-      296.49,
-      260.85
+      274.54,
+      241.67
    ],
    [
       "5.13.2",
-      284.81,
-      254.26
+      262.67,
+      234.1
    ],
    [
       "5.13.3",
-      282.71,
-      254.66
+      258.46,
+      234.74
    ],
    [
       "5.13.4",
-      274.11,
-      249.96
+      252.27,
+      231.53
    ],
    [
       "5.13.5",
-      276.67,
-      253.5
+      257.55,
+      230.2
    ],
    [
       "5.13.6",
-      279.06,
-      264.64
+      255.24,
+      244.83
    ],
    [
       "5.13.7",
-      286.66,
-      269.99
-   ],
-   [
-      "5.13.8",
-      279.6,
-      269.34
-   ],
-   [
-      "5.13.9",
-      301.32,
-      277.81
-   ],
-   [
-      "5.13.10",
-      305.95,
-      275.16
-   ],
-   [
-      "5.15.1",
-      260.6,
-      252.19
-   ],
-   [
-      "5.15.2",
-      268.68,
-      245.61
-   ],
-   [
-      "5.15.3",
-      268.58,
-      248.9
-   ],
-   [
-      "5.15.4",
-      263.14,
-      250.36
-   ],
-   [
-      "5.15.5",
-      260.19,
-      254.63
-   ],
-   [
-      "5.15.6",
-      266.49,
-      258.17
-   ],
-   [
-      "5.15.7",
-      276.67,
-      250.16
-   ],
-   [
-      "5.15.8",
-      266.51,
-      256.39
-   ],
-   [
-      "5.15.9",
-      262.14,
-      262.11
-   ],
-   [
-      "5.17.0",
-      277.65,
-      258.71
-   ],
-   [
-      "5.17.1",
-      268.98,
-      271.33
-   ],
-   [
-      "5.17.2",
-      264.22,
-      252.97
-   ],
-   [
-      "5.17.3",
-      258.84,
-      255.32
-   ],
-   [
-      "5.17.4",
-      249.74,
-      245.2
-   ],
-   [
-      "5.17.5",
-      255.28,
-      258.04
-   ],
-   [
-      "5.17.6",
-      253.39,
-      239.91
-   ],
-   [
-      "5.17.7",
-      258.22,
-      261.79
-   ],
-   [
-      "5.17.8",
-      256.25,
-      282.23
-   ],
-   [
-      "5.17.9",
-      257.82,
-      235.82
-   ],
-   [
-      "5.19.0",
-      258.44,
-      257.7
-   ],
-   [
-      "5.19.1",
-      253.32,
-      254.3
-   ],
-   [
-      "5.19.2",
-      255.07,
-      247.39
-   ],
-   [
-      "5.19.3",
-      249.99,
-      245.42
-   ],
-   [
-      "5.19.4",
-      263.19,
-      243.2
-   ],
-   [
-      "5.19.5",
-      254.56,
-      238.8
-   ],
-   [
-      "5.19.6",
-      261.5,
-      238.53
-   ],
-   [
-      "5.19.7",
-      257,
-      242.88
-   ],
-   [
-      "5.19.8",
-      261.62,
-      251.66
-   ],
-   [
-      "5.19.9",
-      253.61,
-      232.65
-   ],
-   [
-      "5.19.10",
-      255.55,
-      241.94
-   ],
-   [
-      "5.19.11",
-      262.81,
+      261.14,
       248.13
    ],
    [
-      "5.21.0",
+      "5.13.8",
+      259.26,
+      250.06
+   ],
+   [
+      "5.13.9",
+      282.59,
+      258.16
+   ],
+   [
+      "5.13.10",
+      289.49,
+      249.74
+   ],
+   [
+      "5.14.0",
+      257.53,
+      238.03
+   ],
+   [
+      "5.14.4",
+      254.75,
+      235.89
+   ],
+   [
+      "5.15.0",
+      null,
+      232.65
+   ],
+   [
+      "5.15.1",
+      245.48,
+      231.55
+   ],
+   [
+      "5.15.2",
+      247.72,
+      230.75
+   ],
+   [
+      "5.15.3",
+      251.29,
+      229.65
+   ],
+   [
+      "5.15.4",
+      248.42,
+      236.23
+   ],
+   [
+      "5.15.5",
+      248.73,
+      239.98
+   ],
+   [
+      "5.15.6",
+      248.3,
+      242.25
+   ],
+   [
+      "5.15.7",
+      256.22,
+      238.37
+   ],
+   [
+      "5.15.8",
+      248.73,
+      243.03
+   ],
+   [
+      "5.15.9",
+      245.9,
+      249.33
+   ],
+   [
+      "5.16.0",
+      273.59,
+      254.69
+   ],
+   [
+      "5.16.3",
+      270.63,
+      233.81
+   ],
+   [
+      "5.17.0",
+      259.3,
+      241.06
+   ],
+   [
+      "5.17.1",
       249.97,
-      236.92
+      260.1
+   ],
+   [
+      "5.17.2",
+      260.15,
+      250.24
+   ],
+   [
+      "5.17.3",
+      250.71,
+      250.65
+   ],
+   [
+      "5.17.4",
+      241.86,
+      235.75
+   ],
+   [
+      "5.17.5",
+      245.69,
+      247.98
+   ],
+   [
+      "5.17.6",
+      247.45,
+      235.79
+   ],
+   [
+      "5.17.7",
+      251.6,
+      255.67
+   ],
+   [
+      "5.17.8",
+      243.64,
+      277.12
+   ],
+   [
+      "5.17.9",
+      252.37,
+      235.05
+   ],
+   [
+      "5.18.0",
+      240.9,
+      260.91
+   ],
+   [
+      "5.18.4",
+      240.1,
+      251.39
+   ],
+   [
+      "5.19.0",
+      251.28,
+      256.04
+   ],
+   [
+      "5.19.1",
+      245.81,
+      243.11
+   ],
+   [
+      "5.19.2",
+      254.04,
+      236.98
+   ],
+   [
+      "5.19.3",
+      246.92,
+      238.42
+   ],
+   [
+      "5.19.4",
+      251.91,
+      239.13
+   ],
+   [
+      "5.19.5",
+      248.52,
+      233.96
+   ],
+   [
+      "5.19.6",
+      252.74,
+      230.72
+   ],
+   [
+      "5.19.7",
+      253.01,
+      237.39
+   ],
+   [
+      "5.19.8",
+      259.06,
+      242.77
+   ],
+   [
+      "5.19.9",
+      244.22,
+      226.51
+   ],
+   [
+      "5.19.10",
+      248.01,
+      228.63
+   ],
+   [
+      "5.19.11",
+      252.4,
+      227.63
+   ],
+   [
+      "5.20.0",
+      244.36,
+      227.86
+   ],
+   [
+      "5.20.2",
+      250.9,
+      228.51
+   ],
+   [
+      "5.21.0",
+      243.71,
+      229.58
    ],
    [
       "5.21.1",
-      258.4,
-      250.91
+      250.59,
+      244.75
    ],
    [
       "5.21.2",
-      248.71,
-      245.59
+      239.64,
+      234.08
    ],
    [
       "5.21.3",
-      254.98,
-      251.86
+      247.49,
+      244.8
    ],
    [
       "5.21.4",
-      251.37,
-      244.48
+      248.2,
+      242.48
    ],
    [
       "5.21.5",
-      256.84,
-      274.3
+      249.59,
+      265.97
+   ],
+   [
+      "5.21.6",
+      251.94,
+      265.23
+   ],
+   [
+      "5.21.7",
+      224.48,
+      233.35
+   ],
+   [
+      "5.21.8",
+      226.32,
+      223.47
    ],
    [
       "5.22.0",
-      239.69,
-      234.14
+      234.78,
+      229.27
    ],
    [
       "5.23.0",
-      236.28,
-      235.19
+      231.17,
+      228.86
    ],
    [
       "5.23.1",
-      242.3,
-      249.93
+      237.97,
+      241.45
    ]
 ]
 );
