--- a/results/perlstone2015-f/fasta-FASTMODE.html
+++ b/results/perlstone2015-f/fasta-FASTMODE.html
@@ -15,6 +15,11 @@
       "fasta(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      2.13
+   ],
+   [
       "5.13.1",
       2.52,
       2.17
@@ -125,6 +130,51 @@
       2.19
    ],
    [
+      "5.17.1",
+      2.34,
+      2.44
+   ],
+   [
+      "5.17.2",
+      2.38,
+      2.31
+   ],
+   [
+      "5.17.3",
+      2.29,
+      2.24
+   ],
+   [
+      "5.17.4",
+      2.22,
+      2.25
+   ],
+   [
+      "5.17.5",
+      2.24,
+      2.19
+   ],
+   [
+      "5.17.6",
+      2.28,
+      2.22
+   ],
+   [
+      "5.17.7",
+      2.31,
+      2.42
+   ],
+   [
+      "5.17.8",
+      2.23,
+      2.46
+   ],
+   [
+      "5.17.9",
+      2.4,
+      2.15
+   ],
+   [
       "5.18.0",
       2.24,
       2.44
@@ -133,6 +183,61 @@
       "5.18.4",
       2.22,
       2.29
+   ],
+   [
+      "5.19.1",
+      2.26,
+      2.26
+   ],
+   [
+      "5.19.2",
+      2.27,
+      2.14
+   ],
+   [
+      "5.19.3",
+      2.27,
+      2.14
+   ],
+   [
+      "5.19.4",
+      2.26,
+      2.2
+   ],
+   [
+      "5.19.5",
+      2.23,
+      2.19
+   ],
+   [
+      "5.19.6",
+      2.32,
+      2.16
+   ],
+   [
+      "5.19.7",
+      2.32,
+      2.2
+   ],
+   [
+      "5.19.8",
+      2.3,
+      2.19
+   ],
+   [
+      "5.19.9",
+      2.24,
+      2.13
+   ],
+   [
+      "5.19.10",
+      2.23,
+      2.06
+   ],
+   [
+      "5.19.11",
+      2.29,
+      2.12
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - fasta(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::fasta">Benchmark::Perl::Formance::Plugin::PerlStone2015::fasta</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
